Update to .NET Core 3.1

--- a/ClientSide/WebClientDemo/Views/Shared/_Layout.cshtml
+++ b/ClientSide/WebClientDemo/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="LongTaskDemo" asp-action="Index">Long Task </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CallComplexObjDemo" asp-action="Index">Complex Obj</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -48,7 +51,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - WebClientDemo - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - WebClientDemo
         </div>
     </footer>
 
